--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ header{
     font-family: 'Athiti', sans-serif;
     width: 250px;
     height: 40px;
-    background: transparent;
+    background-color: rgba(255, 255, 255, 0.692);
+    border: none;
     border-radius: 5px;
     border-color: #fff;
-    color: #fff;
+    color: black;
     font-size: 20px;
 }
 ul li{
@@ -62,4 +63,11 @@ ul li a{
 }
 header a{
     color: rgb(13, 78, 163);
+}
+/*----------Slide-------------*/
+
+.slide img{
+    width:100%;
+    height:100%;
+    background-size: contain;
 }
